# svelte-axum-file-upload

backend/: Cargo.toml
backend/src/: main.rs
front/: package-lock.json  package.json
front/src/routes/: +page.svelte
